force-app/main/default/objects/vScore__c/vScore__c.object-meta.xml
<CustomObject>
    <label>vScore</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>vScore Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>vScores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>