force-app/main/default/objects/vScore__c/fields/Buyer__c.field-meta.xml
<CustomField>
    <fullName>Buyer__c</fullName>
    <formula>Vendor__r.Owner.FirstName +&quot; &quot;+ Vendor__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer</label>
    <type>Text</type>
</CustomField>