force-app/main/default/objects/vScore__c/fields/Delivery_Score__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Score__c</fullName>
    <formula>( of_On_Time_Deliveries__c / of_Purchases__c )*100</formula>
    <label>Delivery Score</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>