force-app/main/default/objects/vScore__c/fields/Good_Parts__c.field-meta.xml
<CustomField>
    <fullName>Good_Parts__c</fullName>
    <formula>( Quantity_Received__c - Quantity_Rejected__c )/ Quantity_Received__c *100</formula>
    <label>% Good Parts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>