force-app/main/default/objects/vScore__c/fields/of_On_Time_Deliveries__c.field-meta.xml
<CustomField>
    <fullName>of_On_Time_Deliveries__c</fullName>
    <label># of On-Time Deliveries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>