force-app/main/default/objects/vScore__c/fields/of_Purchases__c.field-meta.xml
<CustomField>
    <fullName>of_Purchases__c</fullName>
    <label># of Purchases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>