force-app/main/default/objects/vScore__c/fields/Q1_Representative_is_responsive__c.field-meta.xml
<CustomField>
    <fullName>Q1_Representative_is_responsive__c</fullName>
    <inlineHelpText>Q1. Representative is responsive (i.e. Returns calls/emails, expediting hot parts)</inlineHelpText>
    <label>Q1. Representative is responsive</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>