force-app/main/default/objects/vScore__c/fields/Quality_Points__c.field-meta.xml
<CustomField>
    <fullName>Quality_Points__c</fullName>
    <formula>if( Good_Parts__c =100,10,
if(Good_Parts__c &gt;=98,9,
if(Good_Parts__c &gt;=96,8,
if(Good_Parts__c &gt;=94,7,
if(Good_Parts__c &gt;=92,6,
if(Good_Parts__c &gt;=90,5,
if(Good_Parts__c &gt;=88,4,
if(Good_Parts__c &gt;=86,3,
if(Good_Parts__c &gt;=83,2,
if(Good_Parts__c &gt;=80,1,0))))))))))</formula>
    <label>Quality Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>