force-app/main/default/objects/vScore__c/fields/Quality_Score__c.field-meta.xml
<CustomField>
    <fullName>Quality_Score__c</fullName>
    <formula>Quality_Points__c *10</formula>
    <label>Quality Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>