force-app/main/default/objects/vScore__c/fields/Quantity_Received__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Received__c</fullName>
    <label>Quantity Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>