force-app/main/default/objects/vScore__c/fields/Quantity_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Rejected__c</fullName>
    <label>Quantity Rejected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>