force-app/main/default/objects/vScore__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>vScores</relationshipLabel>
    <relationshipName>vScores</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>